@@ -1,6 +1,6 @@
 /*
  * ATLauncher - https://github.com/ATLauncher/ATLauncher
- * Copyright (C) 2013-2020 ATLauncher
+ * Copyright (C) 2013-2021 ATLauncher
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,26 +18,22 @@
 package com.atlauncher.mclauncher;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import com.atlauncher.App;
 import com.atlauncher.FileSystem;
-import com.atlauncher.data.Account;
-import com.atlauncher.data.Constants;
+import com.atlauncher.constants.Constants;
+import com.atlauncher.data.AbstractAccount;
 import com.atlauncher.data.Instance;
-import com.atlauncher.data.InstanceSettings;
-import com.atlauncher.data.InstanceV2;
 import com.atlauncher.data.LoginResponse;
+import com.atlauncher.data.MicrosoftAccount;
+import com.atlauncher.data.MojangAccount;
 import com.atlauncher.data.minecraft.Library;
-import com.atlauncher.data.minecraft.MinecraftVersion;
 import com.atlauncher.data.minecraft.PropertyMapSerializer;
-import com.atlauncher.data.minecraft.VersionManifest;
-import com.atlauncher.data.minecraft.VersionManifestVersion;
 import com.atlauncher.managers.LogManager;
 import com.atlauncher.network.ErrorReporting;
 import com.atlauncher.utils.Java;
@@ -50,156 +46,12 @@ import com.mojang.util.UUIDTypeAdapter;
 
 public class MCLauncher {
 
-    public static Process launch(Account account, Instance instance, LoginResponse response) throws IOException {
-        StringBuilder cpb = new StringBuilder();
-        boolean hasCustomJarMods = false;
+    public static Process launch(MicrosoftAccount account, Instance instance, Path nativesTempDir) throws Exception {
+        return launch(account, instance, null, nativesTempDir.toFile());
+    }
 
-        ErrorReporting.recordInstancePlay(instance.getPackName(), instance.getVersion(), instance.getLoaderVersion(),
-                1);
-
-        InstanceSettings settings = instance.getSettings();
-        Integer initialMemory = settings.getInitialMemory() == null ? App.settings.initialMemory
-                : settings.getInitialMemory();
-        Integer maximumMemory = settings.getMaximumMemory() == null ? App.settings.maximumMemory
-                : settings.getMaximumMemory();
-        Integer permGen = settings.getPermGen() == null ? App.settings.metaspace : settings.getPermGen();
-        String javaPath = settings.getJavaPath() == null ? App.settings.javaPath : settings.getJavaPath();
-        String javaArguments = settings.getJavaArguments() == null ? App.settings.javaParameters
-                : settings.getJavaArguments();
-
-        File jarMods = instance.getJarModsDirectory();
-        File[] jarModFiles = jarMods.listFiles();
-        if (jarMods.exists() && jarModFiles != null && jarModFiles.length != 0) {
-            for (File file : jarModFiles) {
-                hasCustomJarMods = true;
-                cpb.append(File.pathSeparator);
-                cpb.append(file.getAbsolutePath());
-            }
-        }
-
-        File librariesBaseDir = instance.usesNewLibraries() ? FileSystem.LIBRARIES.toFile()
-                : instance.getBinDirectory();
-
-        for (String jarFile : instance.getLibraries()) {
-            cpb.append(File.pathSeparator);
-            cpb.append(new File(librariesBaseDir, jarFile).getAbsolutePath());
-        }
-
-        File binFolder = instance.getBinDirectory();
-        File[] libraryFiles = binFolder.listFiles();
-        if (binFolder.exists() && libraryFiles != null && libraryFiles.length != 0) {
-            for (File file : libraryFiles) {
-                if (file.isDirectory() || file.getName().equalsIgnoreCase(instance.getMinecraftJar().getName())
-                        || instance.getLibraries().contains(file.getName())) {
-                    continue;
-                }
-
-                LogManager.info("Added in custom library " + file.getName());
-
-                cpb.append(File.pathSeparator);
-                cpb.append(file);
-            }
-        }
-
-        if (!instance.usesNewLibraries()) {
-            cpb.append(File.pathSeparator);
-            cpb.append(instance.getMinecraftJar().getAbsolutePath());
-        }
-
-        List<String> arguments = new ArrayList<>();
-
-        String path = javaPath + File.separator + "bin" + File.separator + "java";
-        if (OS.isWindows()) {
-            path += "w";
-        }
-        arguments.add(path);
-
-        arguments.add("-XX:-OmitStackTraceInFastThrow");
-
-        if (javaArguments.isEmpty() && !Java.isMinecraftJavaNewerThanJava8()) {
-            // Some defaults if on Java 8 or less
-            javaArguments = "-XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy";
-        }
-
-        arguments.add("-Xms" + initialMemory + "M");
-
-        if (OS.getMaximumRam() != 0 && maximumMemory < instance.getMemory()) {
-            if ((OS.getMaximumRam() / 2) < instance.getMemory()) {
-                arguments.add("-Xmx" + maximumMemory + "M");
-            } else {
-                arguments.add("-Xmx" + instance.getMemory() + "M");
-            }
-        } else {
-            arguments.add("-Xmx" + maximumMemory + "M");
-        }
-        if (OS.getMaximumRam() != 0 && permGen < instance.getPermGen()
-                && (OS.getMaximumRam() / 8) < instance.getPermGen()) {
-            if (Java.useMetaspace()) {
-                arguments.add("-XX:MetaspaceSize=" + instance.getPermGen() + "M");
-            } else {
-                arguments.add("-XX:PermSize=" + instance.getPermGen() + "M");
-            }
-        } else {
-            if (Java.useMetaspace()) {
-                arguments.add("-XX:MetaspaceSize=" + permGen + "M");
-            } else {
-                arguments.add("-XX:PermSize=" + permGen + "M");
-            }
-        }
-
-        arguments.add("-Duser.language=en");
-        arguments.add("-Duser.country=US");
-
-        if (hasCustomJarMods) {
-            System.out.println("OH NOES! Avert your eyes!");
-            arguments.add("-Dfml.ignorePatchDiscrepancies=true");
-            arguments.add("-Dfml.ignoreInvalidMinecraftCertificates=true");
-            System.out.println("Okay you can look again, you saw NOTHING!");
-        }
-
-        arguments.add("-Dfml.log.level=" + App.settings.forgeLoggingLevel);
-
-        if (OS.isMac()) {
-            arguments.add("-Dapple.laf.useScreenMenuBar=true");
-            arguments.add("-Xdock:icon=" + new File(instance.getAssetsDir(), "icons/minecraft.icns").getAbsolutePath());
-            arguments.add("-Xdock:name=\"" + instance.getName() + "\"");
-        }
-
-        ArrayList<String> negatedArgs = new ArrayList<>();
-
-        if (!javaArguments.isEmpty()) {
-            for (String arg : javaArguments.split(" ")) {
-                if (!arg.isEmpty()) {
-                    if (instance.hasExtraArguments()) {
-                        if (instance.getExtraArguments().contains(arg)) {
-                            LogManager.error("Duplicate argument " + arg + " found and not added!");
-                            continue;
-                        }
-
-                        if (arg.startsWith("-XX:+")) {
-                            if (instance.getExtraArguments().contains("-XX:-" + arg.substring(5))) {
-                                negatedArgs.add("-XX:-" + arg.substring(5));
-                                LogManager.error("Argument " + arg + " is negated by pack developer and not added!");
-                                continue;
-                            }
-                        }
-                    }
-
-                    if (arguments.toString().contains(arg)) {
-                        LogManager.error("Duplicate argument " + arg + " found and not added!");
-                        continue;
-                    }
-
-                    arguments.add(arg);
-                }
-            }
-        }
-
-        arguments.add("-Djava.library.path=" + instance.getNativesDirectory().getAbsolutePath());
-        arguments.add("-cp");
-        arguments.add(cpb.toString());
-        arguments.add(instance.getMainClass());
-
+    public static Process launch(MojangAccount account, Instance instance, LoginResponse response, Path nativesTempDir)
+            throws Exception {
         String props = "[]";
 
         if (!response.isOffline()) {
@@ -207,111 +59,15 @@ public class MCLauncher {
             props = gson.toJson(response.getAuth().getUserProperties());
         }
 
-        List<String> launchArguments = new ArrayList<>();
+        return launch(account, instance, props, nativesTempDir.toFile());
+    }
 
-        if (instance.hasArguments()) {
-            launchArguments.addAll(instance.getArguments());
-        } else if (instance.hasMinecraftArguments()) {
-            launchArguments = Arrays.asList(instance.getMinecraftArguments().split(" "));
-        } else {
-            VersionManifest versionManifest = com.atlauncher.network.Download.build().cached()
-                    .setUrl(String.format("%s/mc/game/version_manifest.json", Constants.LAUNCHER_META_MINECRAFT))
-                    .asClass(VersionManifest.class);
+    private static Process launch(AbstractAccount account, Instance instance, String props, File nativesDir)
+            throws Exception {
+        List<String> arguments = getArguments(account, instance, props, nativesDir.getAbsolutePath());
 
-            VersionManifestVersion minecraftVersion = versionManifest.versions.stream()
-                    .filter(version -> version.id.equalsIgnoreCase(instance.getMinecraftVersion())).findFirst()
-                    .orElse(null);
-
-            if (minecraftVersion != null) {
-                MinecraftVersion version = com.atlauncher.network.Download.build().cached().setUrl(minecraftVersion.url)
-                        .asClass(MinecraftVersion.class);
-
-                if (version.arguments != null) {
-                    launchArguments = version.arguments.asStringList();
-                } else if (version.minecraftArguments != null) {
-                    launchArguments = Arrays.asList(version.minecraftArguments.split(" "));
-                }
-            }
-        }
-
-        if (launchArguments.size() != 0) {
-            for (String argument : launchArguments) {
-                argument = argument.replace("${auth_player_name}", account.getMinecraftUsername());
-                argument = argument.replace("${profile_name}", instance.getName());
-                argument = argument.replace("${user_properties}", props);
-                argument = argument.replace("${version_name}", instance.getMinecraftVersion());
-                argument = argument.replace("${game_directory}", instance.getRootDirectory().getAbsolutePath());
-                argument = argument.replace("${game_assets}", instance.getAssetsDir().getAbsolutePath());
-                argument = argument.replace("${assets_root}", FileSystem.ASSETS.toAbsolutePath().toString());
-                argument = argument.replace("${assets_index_name}", instance.getAssets());
-                argument = argument.replace("${auth_uuid}", UUIDTypeAdapter.fromUUID(account.getRealUUID()));
-                argument = argument.replace("${auth_access_token}", account.getAccessToken());
-                argument = argument.replace("${auth_session}", account.getSession(response));
-                argument = argument.replace("${version_type}", instance.getVersionType());
-                argument = argument.replace("${launcher_name}", Constants.LAUNCHER_NAME);
-                argument = argument.replace("${launcher_version}", Constants.VERSION.toString());
-                argument = argument.replace("${natives_directory}", instance.getNativesDirectory().getAbsolutePath());
-                argument = argument.replace("${user_type}",
-                        response.isOffline() ? com.mojang.authlib.UserType.MOJANG.getName()
-                                : response.getAuth().getUserType().getName());
-
-                if (!argument.equalsIgnoreCase("-cp") && !argument.equalsIgnoreCase("${classpath}")) {
-                    arguments.add(argument);
-                }
-            }
-        } else {
-            arguments.add("--username=" + account.getMinecraftUsername());
-            arguments.add("--session=" + account.getSession(response));
-
-            // This is for 1.7
-            arguments.add("--accessToken=" + account.getAccessToken());
-            arguments.add("--uuid=" + UUIDTypeAdapter.fromUUID(account.getRealUUID()));
-            // End of stuff for 1.7
-
-            arguments.add("--version=" + instance.getMinecraftVersion());
-            arguments.add("--gameDir=" + instance.getRootDirectory().getAbsolutePath());
-            arguments.add("--assetsDir=" + FileSystem.ASSETS.toAbsolutePath().toString());
-        }
-
-        if (App.settings.maximiseMinecraft) {
-            arguments.add("--width=" + OS.getMaximumWindowWidth());
-            arguments.add("--height=" + OS.getMaximumWindowHeight());
-        } else {
-            arguments.add("--width=" + App.settings.windowWidth);
-            arguments.add("--height=" + App.settings.windowHeight);
-        }
-
-        if (instance.hasExtraArguments()) {
-            String args = instance.getExtraArguments();
-            if (args.contains(" ")) {
-                for (String argument : args.split(" ")) {
-                    if (!negatedArgs.contains(argument)) {
-                        arguments.add(argument);
-                    }
-                }
-            } else {
-                if (!negatedArgs.contains(args)) {
-                    arguments.add(args);
-                }
-            }
-        }
-
-        String argsString = arguments.toString();
-
-        if (!LogManager.showDebug) {
-            if (App.settings != null) {
-                argsString = argsString.replace(FileSystem.BASE_DIR.toAbsolutePath().toString(), "USERSDIR");
-            }
-
-            argsString = argsString.replace(account.getMinecraftUsername(), "REDACTED");
-            argsString = argsString.replace(account.getUUID(), "REDACTED");
-            argsString = argsString.replace(account.getAccessToken(), "REDACTED");
-            argsString = argsString.replace(account.getSession(response), "REDACTED");
-            argsString = argsString.replace(props, "REDACTED");
-        }
-
-        LogManager.info("Launching Minecraft with the following arguments " + "(user related stuff has been removed):"
-                + " " + argsString);
+        LogManager.info("Launching Minecraft with the following arguments (user related stuff has been removed): "
+                + censorArguments(arguments, account, props));
         ProcessBuilder processBuilder = new ProcessBuilder(arguments);
         processBuilder.directory(instance.getRootDirectory());
         processBuilder.redirectErrorStream(true);
@@ -319,27 +75,26 @@ public class MCLauncher {
         return processBuilder.start();
     }
 
-    public static Process launch(Account account, InstanceV2 instance, LoginResponse response, Path nativesTempDir)
-            throws IOException {
+    private static List<String> getArguments(AbstractAccount account, Instance instance, String props,
+            String nativesDir) {
         StringBuilder cpb = new StringBuilder();
         boolean hasCustomJarMods = false;
 
-        ErrorReporting.recordInstancePlay(instance.launcher.pack, instance.launcher.version,
-                instance.launcher.loaderVersion, 2);
+        ErrorReporting.recordInstancePlay(instance.getPackName(), instance.getVersion(), instance.getLoaderVersion(),
+                (instance instanceof Instance ? 2 : 1));
 
-        Integer initialMemory = instance.launcher.initialMemory == null ? App.settings.initialMemory
-                : instance.launcher.initialMemory;
-        Integer maximumMemory = instance.launcher.maximumMemory == null ? App.settings.maximumMemory
-                : instance.launcher.maximumMemory;
-        Integer permGen = instance.launcher.permGen == null ? App.settings.metaspace : instance.launcher.permGen;
-        String javaPath = instance.launcher.javaPath == null ? App.settings.javaPath : instance.launcher.javaPath;
-        String javaArguments = instance.launcher.javaArguments == null ? App.settings.javaParameters
-                : instance.launcher.javaArguments;
+        int initialMemory = Optional.ofNullable(instance.launcher.initialMemory).orElse(App.settings.initialMemory);
+        int maximumMemory = Optional.ofNullable(instance.launcher.maximumMemory).orElse(App.settings.maximumMemory);
+        int permGen = Optional.ofNullable(instance.launcher.permGen).orElse(App.settings.metaspace);
+        String javaPath = Optional.ofNullable(instance.launcher.javaPath).orElse(App.settings.javaPath);
+        String javaArguments = Optional.ofNullable(instance.launcher.javaArguments).orElse(App.settings.javaParameters);
 
-        // add minecraft client jar
-        cpb.append(instance.getMinecraftJarLibraryPath().toAbsolutePath().toString());
+        if (instance instanceof Instance) {
+            // add minecraft client jar
+            cpb.append(instance.getMinecraftJar().getAbsolutePath());
+        }
 
-        File jarMods = instance.getRoot().resolve("jarmods").toFile();
+        File jarMods = instance.getJarModsDirectory();
         File[] jarModFiles = jarMods.listFiles();
         if (jarMods.exists() && jarModFiles != null && jarModFiles.length != 0) {
             for (File file : jarModFiles) {
@@ -365,7 +120,7 @@ public class MCLauncher {
             cpb.append(FileSystem.LIBRARIES.resolve(download.path).toFile().getAbsolutePath());
         });
 
-        File binFolder = instance.getRoot().resolve("bin").toFile();
+        File binFolder = instance.getBinDirectory();
         File[] libraryFiles = binFolder.listFiles();
         if (binFolder.exists() && libraryFiles != null && libraryFiles.length != 0) {
             for (File file : libraryFiles) {
@@ -397,21 +152,22 @@ public class MCLauncher {
 
         arguments.add("-Xms" + initialMemory + "M");
 
-        if (OS.getMaximumRam() != 0 && maximumMemory < instance.launcher.requiredMemory) {
-            if ((OS.getMaximumRam() / 2) < instance.launcher.requiredMemory) {
+        if (OS.getMaximumRam() != 0 && maximumMemory < instance.getMemory()) {
+            if ((OS.getMaximumRam() / 2) < instance.getMemory()) {
                 arguments.add("-Xmx" + maximumMemory + "M");
             } else {
-                arguments.add("-Xmx" + instance.launcher.requiredMemory + "M");
+                arguments.add("-Xmx" + instance.getMemory() + "M");
             }
         } else {
             arguments.add("-Xmx" + maximumMemory + "M");
         }
-        if (OS.getMaximumRam() != 0 && permGen < instance.launcher.requiredPermGen
-                && (OS.getMaximumRam() / 8) < instance.launcher.requiredPermGen) {
+
+        if (OS.getMaximumRam() != 0 && permGen < instance.getPermGen()
+                && (OS.getMaximumRam() / 8) < instance.getPermGen()) {
             if (Java.useMetaspace()) {
-                arguments.add("-XX:MetaspaceSize=" + instance.launcher.requiredPermGen + "M");
+                arguments.add("-XX:MetaspaceSize=" + instance.getPermGen() + "M");
             } else {
-                arguments.add("-XX:PermSize=" + instance.launcher.requiredPermGen + "M");
+                arguments.add("-XX:PermSize=" + instance.getPermGen() + "M");
             }
         } else {
             if (Java.useMetaspace()) {
@@ -435,9 +191,12 @@ public class MCLauncher {
 
         if (OS.isMac()) {
             arguments.add("-Dapple.laf.useScreenMenuBar=true");
-            // arguments.add("-Xdock:icon=" + new File(instance.getAssetsDir(),
-            // "icons/minecraft.icns").getAbsolutePath());
-            arguments.add("-Xdock:name=\"" + instance.launcher.name + "\"");
+            arguments.add("-Xdock:name=\"" + instance.getName() + "\"");
+
+            if (new File(instance.getAssetsDir(), "icons/minecraft.icns").exists()) {
+                arguments.add(
+                        "-Xdock:icon=" + new File(instance.getAssetsDir(), "icons/minecraft.icns").getAbsolutePath());
+            }
         }
 
         if (!javaArguments.isEmpty()) {
@@ -453,62 +212,27 @@ public class MCLauncher {
             }
         }
 
-        String props = "[]";
-
-        if (!response.isOffline()) {
-            Gson gson = new GsonBuilder().registerTypeAdapter(PropertyMap.class, new PropertyMapSerializer()).create();
-            props = gson.toJson(response.getAuth().getUserProperties());
-        }
-
         for (String argument : instance.arguments.jvmAsStringList().stream().distinct().collect(Collectors.toList())) {
-            argument = argument.replace("${auth_player_name}", account.getMinecraftUsername());
-            argument = argument.replace("${profile_name}", instance.launcher.name);
-            argument = argument.replace("${user_properties}", props);
-            argument = argument.replace("${version_name}", instance.id);
-            argument = argument.replace("${game_directory}", instance.getRoot().toAbsolutePath().toString());
-            argument = argument.replace("${game_assets}", instance.getAssetsDir().toAbsolutePath().toString());
-            argument = argument.replace("${assets_root}", FileSystem.ASSETS.toAbsolutePath().toString());
-            argument = argument.replace("${assets_index_name}", instance.assets);
-            argument = argument.replace("${auth_uuid}", UUIDTypeAdapter.fromUUID(account.getRealUUID()));
-            argument = argument.replace("${auth_access_token}", account.getAccessToken());
-            argument = argument.replace("${auth_session}", account.getSession(response));
-            argument = argument.replace("${version_type}", instance.type);
-            argument = argument.replace("${launcher_name}", Constants.LAUNCHER_NAME);
-            argument = argument.replace("${launcher_version}", Constants.VERSION.toString());
-            argument = argument.replace("${natives_directory}", nativesTempDir.toAbsolutePath().toString());
-            argument = argument.replace("${user_type}",
-                    response.isOffline() ? com.mojang.authlib.UserType.MOJANG.getName()
-                            : response.getAuth().getUserType().getName());
+            argument = replaceArgument(argument, instance, account, props, nativesDir);
 
-            if (!argument.equalsIgnoreCase("-cp") && !argument.equalsIgnoreCase("${classpath}")) {
+            if (!argument.equalsIgnoreCase("-cp") && !argument.equalsIgnoreCase("${classpath}")
+                    && !arguments.contains(argument)) {
                 arguments.add(argument);
             }
         }
 
-        arguments.add("-Djava.library.path=" + nativesTempDir.toAbsolutePath().toString());
+        if (OS.isWindows() && !arguments
+                .contains("-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump")) {
+            arguments.add("-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump");
+        }
+
+        arguments.add("-Djava.library.path=" + nativesDir);
         arguments.add("-cp");
         arguments.add(cpb.toString());
-        arguments.add(instance.mainClass);
+        arguments.add(instance.getMainClass());
 
         for (String argument : instance.arguments.gameAsStringList().stream().distinct().collect(Collectors.toList())) {
-            argument = argument.replace("${auth_player_name}", account.getMinecraftUsername());
-            argument = argument.replace("${profile_name}", instance.launcher.name);
-            argument = argument.replace("${user_properties}", props);
-            argument = argument.replace("${version_name}", instance.id);
-            argument = argument.replace("${game_directory}", instance.getRoot().toAbsolutePath().toString());
-            argument = argument.replace("${game_assets}", instance.getAssetsDir().toAbsolutePath().toString());
-            argument = argument.replace("${assets_root}", FileSystem.ASSETS.toAbsolutePath().toString());
-            argument = argument.replace("${assets_index_name}", instance.assets);
-            argument = argument.replace("${auth_uuid}", UUIDTypeAdapter.fromUUID(account.getRealUUID()));
-            argument = argument.replace("${auth_access_token}", account.getAccessToken());
-            argument = argument.replace("${auth_session}", account.getSession(response));
-            argument = argument.replace("${version_type}", instance.type);
-            argument = argument.replace("${launcher_name}", Constants.LAUNCHER_NAME);
-            argument = argument.replace("${launcher_version}", Constants.VERSION.toString());
-            argument = argument.replace("${natives_directory}", nativesTempDir.toAbsolutePath().toString());
-            argument = argument.replace("${user_type}",
-                    response.isOffline() ? com.mojang.authlib.UserType.MOJANG.getName()
-                            : response.getAuth().getUserType().getName());
+            argument = replaceArgument(argument, instance, account, props, nativesDir);
 
             if (!argument.equalsIgnoreCase("-cp") && !argument.equalsIgnoreCase("${classpath}")) {
                 arguments.add(argument);
@@ -523,6 +247,34 @@ public class MCLauncher {
             arguments.add("--height=" + App.settings.windowHeight);
         }
 
+        return arguments;
+    }
+
+    private static String replaceArgument(String incomingArgument, Instance instance, AbstractAccount account,
+            String props, String nativesDir) {
+        String argument = incomingArgument;
+
+        argument = argument.replace("${auth_player_name}", account.minecraftUsername);
+        argument = argument.replace("${profile_name}", instance.getName());
+        argument = argument.replace("${user_properties}", Optional.ofNullable(props).orElse("[]"));
+        argument = argument.replace("${version_name}", instance.getMinecraftVersion());
+        argument = argument.replace("${game_directory}", instance.getRootDirectory().getAbsolutePath());
+        argument = argument.replace("${game_assets}", instance.getAssetsDir().getAbsolutePath());
+        argument = argument.replace("${assets_root}", FileSystem.ASSETS.toAbsolutePath().toString());
+        argument = argument.replace("${assets_index_name}", instance.getAssets());
+        argument = argument.replace("${auth_uuid}", UUIDTypeAdapter.fromUUID(account.getRealUUID()));
+        argument = argument.replace("${auth_access_token}", account.getAccessToken());
+        argument = argument.replace("${version_type}", instance.getVersionType());
+        argument = argument.replace("${launcher_name}", Constants.LAUNCHER_NAME);
+        argument = argument.replace("${launcher_version}", Constants.VERSION.toStringForLogging());
+        argument = argument.replace("${natives_directory}", nativesDir);
+        argument = argument.replace("${user_type}", account.type);
+        argument = argument.replace("${auth_session}", account.getSessionToken());
+
+        return argument;
+    }
+
+    private static String censorArguments(List<String> arguments, AbstractAccount account, String props) {
         String argsString = arguments.toString();
 
         if (!LogManager.showDebug) {
@@ -530,21 +282,16 @@ public class MCLauncher {
                 argsString = argsString.replace(FileSystem.BASE_DIR.toAbsolutePath().toString(), "USERSDIR");
             }
 
-            argsString = argsString.replace(account.getMinecraftUsername(), "REDACTED");
-            argsString = argsString.replace(account.getUUID(), "REDACTED");
+            argsString = argsString.replace(account.minecraftUsername, "REDACTED");
+            argsString = argsString.replace(account.uuid, "REDACTED");
         }
 
-        // always censor these
-        argsString = argsString.replace(props, "REDACTED");
-        argsString = argsString.replace(account.getSession(response), "REDACTED");
+        if (props != null) {
+            argsString = argsString.replace(props, "REDACTED");
+        }
         argsString = argsString.replace(account.getAccessToken(), "REDACTED");
+        argsString = argsString.replace(account.getSessionToken(), "REDACTED");
 
-        LogManager.info("Launching Minecraft with the following arguments " + "(user related stuff has been removed):"
-                + " " + argsString);
-        ProcessBuilder processBuilder = new ProcessBuilder(arguments);
-        processBuilder.directory(instance.getRoot().toAbsolutePath().toFile());
-        processBuilder.redirectErrorStream(true);
-        processBuilder.environment().remove("_JAVA_OPTIONS"); // Remove any _JAVA_OPTIONS, they are a PAIN
-        return processBuilder.start();
+        return argsString;
     }
 }
